--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the terminal</h1>
+		<h1>get it got it good! Git, GitHub & the terminal</h1>
 		<p>Gotta love becoming a creepy coder <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
